Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-715

ArrayIndexOutOfBoundsException / Invalid query handle when reading large HBase cell

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 1.1.1
    • Impala 1.2.4
    • None
    • None

    Description

      The hbase-table-scanner used CallShortMethod to retrieve the size of the array. Short will overflow. Because the size of the array is an int, we should use CallIntMethod instead and this resolve the problem.

      Attachments

        Activity

          People

            Unassigned Unassigned
            alan@cloudera.com Alan Choi
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: