    IMPALA-715 HBase scanner should use CallIntMethod for int return type function call

The hbase-table-scanner used CallShortMethod to retrieve the size of the array.
    Short will overflow. Because the size of the array is an int, we should use
    CallIntMethod instead.

Change-Id: I941981f7504ee04adf998398f8baf6beae76d000
Reviewed-on: http://gerrit.ent.cloudera.com:8080/1171
Reviewed-by: Alan Choi <alan@cloudera.com>
Tested-by: Alan Choi <alan@cloudera.com>
Tested-by: jenkins